# ccdd-gate

./: .gitattributes  .gitignore  .mcp.json.example  BENCHMARKS.md  README.md  ccdd.py  ccdd_context.schema.json  index.html  linters.yaml  llms-skills.json  llms.txt  pyproject.toml  requirements.txt  run_executor.py  skills-index.snapshot  task_contract.schema.json
.agents/: AGENTS.md
audit/: A1-core.md  A2-orchestrator.md  A3-mcp.md  A4-evals-governance.md  A5-auditors-github.md  A6-tests-docs.md  R1-REPORT.md  RA2-REPORT.md  RA3-REPORT.md  RB1-REPORT.md  RB2-REPORT.md  RB3-REPORT.md  RC1-REPORT.md  RD1-REPORT.md  RE1-REPORT.md
benchmarks/: bench_gate.py
examples/: linters.yaml.example  rules.yaml.example
fixtures/: complex_sample.py  prd_sample.txt
knowledge/: index.md
runners/: __init__.py  approve_eval_cases.py  approve_tests.py  assert_check.py  audit_annotations.py  audit_composition.py  audit_orphan_targets.py  bareexcept_check.py  complexity_gate.py  complexity_mcp.py  complexity_runner.py  coverage_check.py  deps_check.py  eval_checks.py  eval_gate.py  eval_judge.py  guardrails_lang.yaml  judge_audit.py  linter_gate.py  mcp_smoke.py  measure.py  metrics.py  metrics_backends.py  metrics_treesitter.py  mutation_audit.py  mutdef_check.py  nonecmp_check.py  orchestrator.py  pre_complexity_helpers.py  pre_complexity_runner.py  purity_check.py  repo_gate.py  review_attestations.py  rules_gate.py  runner_common.py  semantic_hash.py  sig_check.py  sig_treesitter.py  task_gate.py  tc_lint.py  (+2 more)
scripts/: smoke_run_ephemeral_agent.py  validate_contracts.py
(+224 files in other folders)
